--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -7,7 +7,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# $\\color{black}{\\text{Kapittel 1 - Grunnleggende regning/prosentregning/vekstfaktor}}$"
+    "# $\\color{black}{\\text{Kapittel 1 - Grunnleggende regning}}$"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "division_1 = 225 / 100\n",
     "division_2 = 7.75 / 1000\n",
     "\n",
-    "# Utskrift av resultatene\n",
+    "# Utskrift av resultatene med avrunding :.0f betyr feks ingen desimaler, :.1f betyr 1 desimal osv\n",
     "print(f\"70 kr + 50 kr = {addition_1:.0f} kr\")\n",
     "print(f\"700 kr + 500 kr = {addition_2:.0f} kr\")\n",
     "print(f\"120 kr - 50 kr = {subtraction_1:.0f} kr\")\n",
@@ -226,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "91964647-da88-47ad-a34e-71ae5a390403",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee486994e56e471ba48320d3629b178d",
+       "model_id": "a3cbda3ae6d04dff88867269d8b65bf3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ee7ace7aaf9480caf9190fcf1d98b56",
+       "model_id": "26edc65876604f6395af67d50223e03e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -706,6 +706,173 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36407ec9-aa6e-4d2d-85b5-b8ac0aa7b63f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Forholdskalkulator med saft og vann som eksempel\n",
+    "from fractions import Fraction\n",
+    "\n",
+    "# 🔧 Konverteringsfunksjon for mengde-input\n",
+    "def les_mengde(prompt):\n",
+    "    while True:\n",
+    "        tekst = input(f\"{prompt} (f.eks. 1.5l, 15dl, 100cl, 250ml, 1/2l) eller q for å avslutte: \").strip().lower()\n",
+    "        if tekst == \"q\":\n",
+    "            print(\"\\n📤 Programmet avsluttes. Takk for at du brukte kalkulatoren! 🧃\")\n",
+    "            return None\n",
+    "        try:\n",
+    "            if tekst.endswith(\"l\") and not tekst.endswith(\"ml\"):\n",
+    "                mengde = Fraction(tekst[:-1]) * 10         # liter til dl\n",
+    "            elif tekst.endswith(\"dl\"):\n",
+    "                mengde = Fraction(tekst[:-2])              # dl\n",
+    "            elif tekst.endswith(\"cl\"):\n",
+    "                mengde = Fraction(tekst[:-2]) / 10         # cl til dl\n",
+    "            elif tekst.endswith(\"ml\"):\n",
+    "                mengde = Fraction(tekst[:-2]) / 100        # ml til dl\n",
+    "            else:\n",
+    "                mengde = Fraction(tekst)                   # tolkes som dl\n",
+    "            return float(mengde)\n",
+    "        except:\n",
+    "            print(\"❌ Ugyldig mengde. Prøv igjen.\")\n",
+    "\n",
+    "# 📦 Les forhold saft:vann\n",
+    "def les_forhold():\n",
+    "    while True:\n",
+    "        forhold = input(\"Oppgi forhold mellom saft og vann (f.eks. 1:5 eller 1/6:5) eller q for å avslutte: \").strip()\n",
+    "        if forhold.lower() == \"q\":\n",
+    "            print(\"\\n📤 Programmet avsluttes.\")\n",
+    "            return None\n",
+    "        try:\n",
+    "            saft_del, vann_del = forhold.split(\":\")\n",
+    "            saft = Fraction(saft_del)\n",
+    "            vann = Fraction(vann_del)\n",
+    "            return saft, vann\n",
+    "        except:\n",
+    "            print(\"❌ Ugyldig format. Bruk f.eks. 1:5 eller 1/3:2\")\n",
+    "\n",
+    "# 🧾 Vis resultat i flere enheter\n",
+    "def vis_resultat(saft_dl, vann_dl):\n",
+    "    total_dl = saft_dl + vann_dl\n",
+    "    print(f\"\\n🧮 Resultat:\")\n",
+    "    print(f\"- Saft: {saft_dl:.2f} dl ({saft_dl/10:.2f} l, {saft_dl*10:.0f} cl, {saft_dl*100:.0f} ml)\")\n",
+    "    print(f\"- Vann: {vann_dl:.2f} dl ({vann_dl/10:.2f} l, {vann_dl*10:.0f} cl, {vann_dl*100:.0f} ml)\")\n",
+    "    print(f\"- Totalt: {total_dl:.2f} dl ({total_dl/10:.2f} l)\")\n",
+    "\n",
+    "# 🔢 Kalkulasjoner\n",
+    "def beregn_fra_totalmengde():\n",
+    "    forhold = les_forhold()\n",
+    "    if forhold is None:\n",
+    "        return\n",
+    "    saft, vann = forhold\n",
+    "    total = les_mengde(\"Hvor mye ferdig drikke ønsker du\")\n",
+    "    if total is None:\n",
+    "        return\n",
+    "    total_deler = saft + vann\n",
+    "    saft_dl = (saft / total_deler) * total\n",
+    "    vann_dl = (vann / total_deler) * total\n",
+    "    vis_resultat(saft_dl, vann_dl)\n",
+    "\n",
+    "def beregn_fra_saftmengde():\n",
+    "    forhold = les_forhold()\n",
+    "    if forhold is None:\n",
+    "        return\n",
+    "    saft, vann = forhold\n",
+    "    saft_dl = les_mengde(\"Hvor mye saft har du\")\n",
+    "    if saft_dl is None:\n",
+    "        return\n",
+    "    faktor = saft_dl / float(saft)\n",
+    "    vann_dl = float(vann) * faktor\n",
+    "    vis_resultat(saft_dl, vann_dl)\n",
+    "\n",
+    "def beregn_fra_vannmengde():\n",
+    "    forhold = les_forhold()\n",
+    "    if forhold is None:\n",
+    "        return\n",
+    "    saft, vann = forhold\n",
+    "    vann_dl = les_mengde(\"Hvor mye vann har du\")\n",
+    "    if vann_dl is None:\n",
+    "        return\n",
+    "    faktor = vann_dl / float(vann)\n",
+    "    saft_dl = float(saft) * faktor\n",
+    "    vis_resultat(saft_dl, vann_dl)\n",
+    "\n",
+    "def beregn_fra_prosent():\n",
+    "    prosent_saft = input(\"Hvor mange prosent av drikken skal være saft? (f.eks. 20) eller q for å avslutte: \")\n",
+    "    if prosent_saft.lower() == \"q\":\n",
+    "        print(\"\\n📤 Programmet avsluttes.\")\n",
+    "        return\n",
+    "    try:\n",
+    "        prosent_saft = float(prosent_saft)\n",
+    "        total = les_mengde(\"Hvor mye ferdig drikke ønsker du\")\n",
+    "        if total is None:\n",
+    "            return\n",
+    "        saft_dl = (prosent_saft / 100) * total\n",
+    "        vann_dl = total - saft_dl\n",
+    "        vis_resultat(saft_dl, vann_dl)\n",
+    "    except:\n",
+    "        print(\"❌ Ugyldig prosent. Prøv igjen.\")\n",
+    "\n",
+    "# 💰 Fordeling av beløp etter brøk\n",
+    "def fordel_beløp():\n",
+    "    print(\"\\n💰 Fordeling av beløp mellom tre personer der to får oppgitt brøk og siste får resten.\")\n",
+    "    try:\n",
+    "        total = float(input(\"Hvor mye penger skal fordeles totalt?: \"))\n",
+    "        andel1 = Fraction(input(\"Hvor stor andel skal første person ha?: \"))\n",
+    "        andel2 = Fraction(input(\"Hvor stor andel skal andre person ha?: \"))\n",
+    "        if andel1 + andel2 > 1:\n",
+    "            print(\"❌ Summen av andelene er mer enn 1. Prøv igjen.\")\n",
+    "            return\n",
+    "        andel3 = 1 - andel1 - andel2\n",
+    "        beløp1 = total * float(andel1)\n",
+    "        beløp2 = total * float(andel2)\n",
+    "        beløp3 = total * float(andel3)\n",
+    "        print(f\"\\n📊 Fordeling:\")\n",
+    "        print(f\"- Person 1 ({andel1}): {beløp1:.2f} kr\")\n",
+    "        print(f\"- Person 2 ({andel2}): {beløp2:.2f} kr\")\n",
+    "        print(f\"- Person 3 ({andel3}): {beløp3:.2f} kr\")\n",
+    "    except:\n",
+    "        print(\"❌ Ugyldig input. Prøv igjen.\")\n",
+    "\n",
+    "# 🧃 Hovedmeny\n",
+    "def hovedprogram():\n",
+    "    while True:\n",
+    "        print(\"\\n🧃 Forholdskalkulator for saft og vann 🧃\")\n",
+    "        print(\"1. Beregn saft og vann fra forhold og total mengde\")\n",
+    "        print(\"2. Beregn vann og total mengde fra forhold og saftmengde\")\n",
+    "        print(\"3. Beregn saft og total mengde fra forhold og vannmengde\")\n",
+    "        print(\"4. Beregn mengder fra ønsket prosent saft og total mengde\")\n",
+    "        print(\"5. Fordel et pengebeløp etter brøker\")\n",
+    "        print(\"6. Avslutt\")\n",
+    "        valg = input(\"Velg et alternativ (1-6) eller q for å avslutte: \").strip().lower()\n",
+    "\n",
+    "        if valg == \"1\":\n",
+    "            beregn_fra_totalmengde()\n",
+    "        elif valg == \"2\":\n",
+    "            beregn_fra_saftmengde()\n",
+    "        elif valg == \"3\":\n",
+    "            beregn_fra_vannmengde()\n",
+    "        elif valg == \"4\":\n",
+    "            beregn_fra_prosent()\n",
+    "        elif valg == \"5\":\n",
+    "            fordel_beløp()\n",
+    "        elif valg == \"6\" or valg == \"q\":\n",
+    "            print(\"\\n📤 Programmet avsluttes. Takk for at du brukte kalkulatoren! 🧃\")\n",
+    "            return\n",
+    "        else:\n",
+    "            print(\"❌ Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "        nytt = input(\"\\n🔁 Vil du gjøre en ny beregning? (j/n): \").strip().lower()\n",
+    "        if nytt != \"j\":\n",
+    "            print(\"\\n📤 Programmet avsluttes. Ha en fin dag!\")\n",
+    "            return\n",
+    "\n",
+    "# ▶️ Start programmet i Jupyter\n",
+    "hovedprogram()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "850742d4-a896-4855-89ce-fb46627677be",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "53386af8-07b1-4ee5-b987-52154a23627a",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1236,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ditt valg:  3\n"
+      "Ditt valg:  1\n"
      ]
     },
     {
@@ -1088,10 +1255,9 @@
      "output_type": "stream",
      "text": [
       "Ditt valg:  1\n",
-      "Skriv inn fast månedslønn (kr):  25000\n",
+      "Skriv inn fast månedslønn (kr):  20000\n",
       "\n",
-      "Har du jobbet overtid? (j/n):  n\n",
-      "Skriv inn prosentsats for forskuddstrekk (f.eks. 34):  34\n"
+      "Har du jobbet overtid? (j/n):  n\n"
      ]
     },
     {
@@ -1102,12 +1268,12 @@
       "🧾 Lønnsslipp\n",
       "--------------------------------------------------\n",
       "Lønn beregnet ut fra periode: måned\n",
-      "Fastlønn: 25000.00 kr\n",
-      "Bruttolønn: 25000.00 kr\n",
+      "Fastlønn: 20000.00 kr\n",
+      "Bruttolønn: 20000.00 kr\n",
       "--------------------------------------------------\n",
-      "Forskuddstrekk (prosentkort): 8500.00 kr\n",
+      "Skatt: 0.00 kr\n",
       "--------------------------------------------------\n",
-      "Netto utbetalt: 16500.00 kr\n",
+      "Netto utbetalt: 20000.00 kr\n",
       "\n",
       "\n",
       "📌 Hva slags skattekort bruker du?\n",
@@ -4645,7 +4811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
