--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -564,148 +564,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e33ef2-83fc-4389-a393-573f1316e62a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1 Grunnleggende regning: 1.6 Prosent\n",
-    "# 1.6 Prosent Finn % av ett tall. Formel: p % av ett tall = p/100 * tallet\n",
-    "while True:\n",
-    "    user_input = input(\"Skriv inn prosent (eller 'q' for å avslutte): \")\n",
-    "    if user_input.lower() == 'q':\n",
-    "        print(\"Avslutter programmet.\")\n",
-    "        break\n",
-    "    try:\n",
-    "        prosent = float(user_input)\n",
-    "        hele_tallet = float(input(\"Skriv inn hele tallet: \"))\n",
-    "        prosentdelen = prosent / 100 * hele_tallet\n",
-    "        print(f\"{prosent}% av {hele_tallet} er {round(prosentdelen, 2)}\")\n",
-    "    except ValueError:\n",
-    "        print(\"Ugyldig input. Vennligst skriv inn tallverdier.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be9c8626-7f2c-4fb6-b982-aa0977866e30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1 Grunnleggende regning: 1.6 Prosent\n",
-    "# Hvor mange prosent delen av ett tall er av det hele tallet er, feks 10 er ...% av 30\n",
-    "from dataclasses import dataclass\n",
-    "\n",
-    "@dataclass\n",
-    "class Prosentandel:\n",
-    "    delen: float\n",
-    "    hele: float\n",
-    "\n",
-    "    def beregn(self) -> float:\n",
-    "        if self.hele == 0:\n",
-    "            raise ValueError(\"Hele kan ikke være null.\")\n",
-    "        return (self.delen / self.hele) * 100\n",
-    "\n",
-    "def main():\n",
-    "    print(\"Velkommen til programmet som regner ut hvor mange prosent ett tall er av ett annet tall\")\n",
-    "    print(\"Trykk 'q' når som helst for å avslutte programmet.\\n\")\n",
-    "\n",
-    "    while True:\n",
-    "        delen_input = input(\"Skriv inn delen av tallet (eller 'q' for å avslutte): \").strip().lower()\n",
-    "        if delen_input == 'q':\n",
-    "            print(\"Programmet avsluttes.\")\n",
-    "            break\n",
-    "\n",
-    "        hele_input = input(\"Skriv inn det hele tallet (eller 'q' for å avslutte): \").strip().lower()\n",
-    "        if hele_input == 'q':\n",
-    "            print(\"Programmet avsluttes.\")\n",
-    "            break\n",
-    "\n",
-    "        try:\n",
-    "            delen = float(delen_input)\n",
-    "            hele = float(hele_input)\n",
-    "            prosentandel = Prosentandel(delen=delen, hele=hele)\n",
-    "            prosent = prosentandel.beregn()\n",
-    "            print(f\"{prosentandel.delen} er {prosent:.2f}% av {prosentandel.hele}.\")\n",
-    "        except ValueError as e:\n",
-    "            print(e)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Ugyldig input: {e}\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b71d0ab4-b0b1-4ddb-aebb-ebb0b921ee4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1 Grunnleggende regning: 1.6 Prosent\n",
-    "# Regel 1. Del av tallet = (Hele tallet ∙ Prosenten) / 100\n",
-    "def beregn_hele_tallet(prosent, kroner):\n",
-    "    return kroner * 100 / prosent\n",
-    "\n",
-    "def beregn_prosent(hele_tallet, kroner):\n",
-    "    return (kroner / hele_tallet) * 100\n",
-    "\n",
-    "def beregn_del_av_tallet(hele_tallet, prosent):\n",
-    "    return hele_tallet * prosent / 100\n",
-    "\n",
-    "def hovedprogram():\n",
-    "    print(\"Velkommen til kalkulatoren for: Del av tallet = (Hele tallet ∙ Prosenten) / 100\")\n",
-    "    print(\"Trykk 'q' når som helst for å avslutte programmet og trykk enter.\\n\")\n",
-    "    print(\"Hva ønsker du å beregne?\")\n",
-    "    \n",
-    "    print(\"1: Hele tallet\")\n",
-    "    print(\"2: Prosent\")\n",
-    "    print(\"3: Del av tallet\")\n",
-    "    \n",
-    "    while True:\n",
-    "        valg = input(\"Skriv inn nummeret på det du ønsker å beregne (1, 2, eller 3): \")\n",
-    "        \n",
-    "        if valg.lower() == 'q':\n",
-    "            print(\"Avslutter programmet. Ha en fin dag!\")\n",
-    "            break\n",
-    "        \n",
-    "        if valg == \"1\":\n",
-    "            try:\n",
-    "                prosent = float(input(\"Skriv inn prosentverdien: \"))\n",
-    "                kroner = float(input(\"Skriv inn del av hele tallet: \"))\n",
-    "                hele_tallet = beregn_hele_tallet(prosent, kroner)\n",
-    "                print(f\"Hele tallet er: {hele_tallet:.2f}\\n\")\n",
-    "            except ValueError:\n",
-    "                print(\"Ugyldig input. Vennligst skriv inn gyldige tall.\")\n",
-    "        \n",
-    "        elif valg == \"2\":\n",
-    "            try:\n",
-    "                hele_tallet = float(input(\"Skriv inn hele tallet: \"))\n",
-    "                kroner = float(input(\"Skriv inn del av tallet: \"))\n",
-    "                prosent = beregn_prosent(hele_tallet, kroner)\n",
-    "                print(f\"Prosentverdien er: {prosent:.2f} %\\n\")\n",
-    "            except ValueError:\n",
-    "                print(\"Ugyldig input. Vennligst skriv inn gyldige tall.\")\n",
-    "        \n",
-    "        elif valg == \"3\":\n",
-    "            try:\n",
-    "                hele_tallet = float(input(\"Skriv inn hele tallet: \"))\n",
-    "                prosent = float(input(\"Skriv inn prosentverdien: \"))\n",
-    "                del_av_tallet = beregn_del_av_tallet(hele_tallet, prosent)\n",
-    "                print(f\"Del av tallet er: {del_av_tallet:.2f}\\n\")\n",
-    "            except ValueError:\n",
-    "                print(\"Ugyldig input. Vennligst skriv inn gyldige tall.\")\n",
-    "        \n",
-    "        else:\n",
-    "            print(\"Ugyldig valg. Vennligst velg 1, 2, eller 3.\")\n",
-    "\n",
-    "# Kjør hovedprogrammet\n",
-    "hovedprogram()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "36407ec9-aa6e-4d2d-85b5-b8ac0aa7b63f",
    "metadata": {},
    "outputs": [],
@@ -867,6 +725,148 @@
     "            return\n",
     "\n",
     "# ▶️ Start programmet i Jupyter\n",
+    "hovedprogram()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00e33ef2-83fc-4389-a393-573f1316e62a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 Grunnleggende regning: 1.6 Prosent\n",
+    "# 1.6 Prosent Finn % av ett tall. Formel: p % av ett tall = p/100 * tallet\n",
+    "while True:\n",
+    "    user_input = input(\"Skriv inn prosent (eller 'q' for å avslutte): \")\n",
+    "    if user_input.lower() == 'q':\n",
+    "        print(\"Avslutter programmet.\")\n",
+    "        break\n",
+    "    try:\n",
+    "        prosent = float(user_input)\n",
+    "        hele_tallet = float(input(\"Skriv inn hele tallet: \"))\n",
+    "        prosentdelen = prosent / 100 * hele_tallet\n",
+    "        print(f\"{prosent}% av {hele_tallet} er {round(prosentdelen, 2)}\")\n",
+    "    except ValueError:\n",
+    "        print(\"Ugyldig input. Vennligst skriv inn tallverdier.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be9c8626-7f2c-4fb6-b982-aa0977866e30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 Grunnleggende regning: 1.6 Prosent\n",
+    "# Hvor mange prosent delen av ett tall er av det hele tallet er, feks 10 er ...% av 30\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Prosentandel:\n",
+    "    delen: float\n",
+    "    hele: float\n",
+    "\n",
+    "    def beregn(self) -> float:\n",
+    "        if self.hele == 0:\n",
+    "            raise ValueError(\"Hele kan ikke være null.\")\n",
+    "        return (self.delen / self.hele) * 100\n",
+    "\n",
+    "def main():\n",
+    "    print(\"Velkommen til programmet som regner ut hvor mange prosent ett tall er av ett annet tall\")\n",
+    "    print(\"Trykk 'q' når som helst for å avslutte programmet.\\n\")\n",
+    "\n",
+    "    while True:\n",
+    "        delen_input = input(\"Skriv inn delen av tallet (eller 'q' for å avslutte): \").strip().lower()\n",
+    "        if delen_input == 'q':\n",
+    "            print(\"Programmet avsluttes.\")\n",
+    "            break\n",
+    "\n",
+    "        hele_input = input(\"Skriv inn det hele tallet (eller 'q' for å avslutte): \").strip().lower()\n",
+    "        if hele_input == 'q':\n",
+    "            print(\"Programmet avsluttes.\")\n",
+    "            break\n",
+    "\n",
+    "        try:\n",
+    "            delen = float(delen_input)\n",
+    "            hele = float(hele_input)\n",
+    "            prosentandel = Prosentandel(delen=delen, hele=hele)\n",
+    "            prosent = prosentandel.beregn()\n",
+    "            print(f\"{prosentandel.delen} er {prosent:.2f}% av {prosentandel.hele}.\")\n",
+    "        except ValueError as e:\n",
+    "            print(e)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Ugyldig input: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71d0ab4-b0b1-4ddb-aebb-ebb0b921ee4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 Grunnleggende regning: 1.6 Prosent\n",
+    "# Regel 1. Del av tallet = (Hele tallet ∙ Prosenten) / 100\n",
+    "def beregn_hele_tallet(prosent, kroner):\n",
+    "    return kroner * 100 / prosent\n",
+    "\n",
+    "def beregn_prosent(hele_tallet, kroner):\n",
+    "    return (kroner / hele_tallet) * 100\n",
+    "\n",
+    "def beregn_del_av_tallet(hele_tallet, prosent):\n",
+    "    return hele_tallet * prosent / 100\n",
+    "\n",
+    "def hovedprogram():\n",
+    "    print(\"Velkommen til kalkulatoren for: Del av tallet = (Hele tallet ∙ Prosenten) / 100\")\n",
+    "    print(\"Trykk 'q' når som helst for å avslutte programmet og trykk enter.\\n\")\n",
+    "    print(\"Hva ønsker du å beregne?\")\n",
+    "    \n",
+    "    print(\"1: Hele tallet\")\n",
+    "    print(\"2: Prosent\")\n",
+    "    print(\"3: Del av tallet\")\n",
+    "    \n",
+    "    while True:\n",
+    "        valg = input(\"Skriv inn nummeret på det du ønsker å beregne (1, 2, eller 3): \")\n",
+    "        \n",
+    "        if valg.lower() == 'q':\n",
+    "            print(\"Avslutter programmet. Ha en fin dag!\")\n",
+    "            break\n",
+    "        \n",
+    "        if valg == \"1\":\n",
+    "            try:\n",
+    "                prosent = float(input(\"Skriv inn prosentverdien: \"))\n",
+    "                kroner = float(input(\"Skriv inn del av hele tallet: \"))\n",
+    "                hele_tallet = beregn_hele_tallet(prosent, kroner)\n",
+    "                print(f\"Hele tallet er: {hele_tallet:.2f}\\n\")\n",
+    "            except ValueError:\n",
+    "                print(\"Ugyldig input. Vennligst skriv inn gyldige tall.\")\n",
+    "        \n",
+    "        elif valg == \"2\":\n",
+    "            try:\n",
+    "                hele_tallet = float(input(\"Skriv inn hele tallet: \"))\n",
+    "                kroner = float(input(\"Skriv inn del av tallet: \"))\n",
+    "                prosent = beregn_prosent(hele_tallet, kroner)\n",
+    "                print(f\"Prosentverdien er: {prosent:.2f} %\\n\")\n",
+    "            except ValueError:\n",
+    "                print(\"Ugyldig input. Vennligst skriv inn gyldige tall.\")\n",
+    "        \n",
+    "        elif valg == \"3\":\n",
+    "            try:\n",
+    "                hele_tallet = float(input(\"Skriv inn hele tallet: \"))\n",
+    "                prosent = float(input(\"Skriv inn prosentverdien: \"))\n",
+    "                del_av_tallet = beregn_del_av_tallet(hele_tallet, prosent)\n",
+    "                print(f\"Del av tallet er: {del_av_tallet:.2f}\\n\")\n",
+    "            except ValueError:\n",
+    "                print(\"Ugyldig input. Vennligst skriv inn gyldige tall.\")\n",
+    "        \n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Vennligst velg 1, 2, eller 3.\")\n",
+    "\n",
+    "# Kjør hovedprogrammet\n",
     "hovedprogram()"
    ]
   },
@@ -4142,7 +4142,9 @@
   {
    "cell_type": "markdown",
    "id": "f13aaa9f-c9ac-435d-8f77-818f4d1a0be1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{red}{\\text{Kapittel 5 - Yrkesøkonomi}}$"
    ]
