--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -2390,7 +2390,9 @@
   {
    "cell_type": "markdown",
    "id": "3d7a2661-7385-43b3-a80c-3fbe44f2e608",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{blue}{\\text{Kapittel 3 - Formler}}$"
    ]
@@ -4765,7 +4767,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
