--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -1831,9 +1831,7 @@
   {
    "cell_type": "markdown",
    "id": "9115020b-c8f7-4a8e-89e2-f89408181cac",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{blue}{\\text{Kapittel 3 - Formler og geometri}}$"
    ]
@@ -2854,11 +2852,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7f678681-144d-49c7-9ee1-4f6467b6e597",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2cddd53d37bc45b8b8a677353d616b9a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='a (katet 1):', layout=Layout(width='600px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f8563bf27dc4de6bd0a8ffbefdc4b92",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='b (katet 2):', layout=Layout(width='600px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b8748b5a3414cdeb5423495013e2377",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='c (hypotenus):', layout=Layout(width='600px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de8508c7a3284c17975b704534652745",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Beregn', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21c57560334b42c380099a059efcee1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 3.6 Pytagoras setning\n",
+    "# 3.6 Pytagoras setning med graf og støtte for komma\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Funksjon for å konvertere input med komma til flyttall\n",
+    "def convert_to_float(value):\n",
+    "    try:\n",
+    "        return float(value.replace(',', '.'))\n",
+    "    except ValueError:\n",
+    "        return None\n",
+    "\n",
+    "# Funksjon for å beregne manglende side\n",
+    "def calculate_pythagoras(a, b, c):\n",
+    "    if a is None and b is not None and c is not None:\n",
+    "        a = math.sqrt(c**2 - b**2)\n",
+    "        return f\"Den manglende siden a er {a:.2f}\", a, b, c\n",
+    "    elif b is None and a is not None and c is not None:\n",
+    "        b = math.sqrt(c**2 - a**2)\n",
+    "        return f\"Den manglende siden b er {b:.2f}\", a, b, c\n",
+    "    elif c is None and a is not None and b is not None:\n",
+    "        c = math.sqrt(a**2 + b**2)\n",
+    "        return f\"Den manglende siden c (hypotenus) er {c:.2f}\", a, b, c\n",
+    "    else:\n",
+    "        return \"Vennligst fyll inn to av tre felt for å beregne den manglende siden.\", a, b, c\n",
+    "\n",
+    "# Funksjon for å tegne trekanten\n",
+    "def draw_triangle(a, b, c):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot([0, a], [0, 0], 'b-', label=f'a = {a:.2f}')\n",
+    "    ax.plot([0, 0], [0, b], 'r-', label=f'b = {b:.2f}')\n",
+    "    ax.plot([0, a], [b, 0], 'g-', label=f'c = {c:.2f}')\n",
+    "    ax.set_xlim(0, max(a, b, c))\n",
+    "    ax.set_ylim(0, max(a, b, c))\n",
+    "    ax.set_aspect('equal', 'box')\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Inndatafelt med bred layout\n",
+    "a_input = widgets.Text(description=\"a (katet 1):\", layout=widgets.Layout(width='600px'))\n",
+    "b_input = widgets.Text(description=\"b (katet 2):\", layout=widgets.Layout(width='600px'))\n",
+    "c_input = widgets.Text(description=\"c (hypotenus):\", layout=widgets.Layout(width='600px'))\n",
+    "\n",
+    "# Utdatafelt\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "# Kalkuleringsknapp\n",
+    "calc_button = widgets.Button(description=\"Beregn\")\n",
+    "\n",
+    "# Hva som skjer når knappen trykkes\n",
+    "def on_calc_button_clicked(b):\n",
+    "    with output:\n",
+    "        output.clear_output()\n",
+    "        a = convert_to_float(a_input.value)\n",
+    "        b = convert_to_float(b_input.value)\n",
+    "        c = convert_to_float(c_input.value)\n",
+    "        if a is None and a_input.value != '':\n",
+    "            print(\"Ugyldig verdi for a. Vennligst bruk tall med punktum eller komma som desimaltegn.\")\n",
+    "        elif b is None and b_input.value != '':\n",
+    "            print(\"Ugyldig verdi for b. Vennligst bruk tall med punktum eller komma som desimaltegn.\")\n",
+    "        elif c is None and c_input.value != '':\n",
+    "            print(\"Ugyldig verdi for c. Vennligst bruk tall med punktum eller komma som desimaltegn.\")\n",
+    "        else:\n",
+    "            result, a, b, c = calculate_pythagoras(a, b, c)\n",
+    "            print(result)\n",
+    "            if a and b and c:\n",
+    "                draw_triangle(a, b, c)\n",
+    "\n",
+    "calc_button.on_click(on_calc_button_clicked)\n",
+    "\n",
+    "# Vis widgetene\n",
+    "display(a_input, b_input, c_input, calc_button, output)"
+   ]
   },
   {
    "cell_type": "code",
