--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -3403,6 +3403,178 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "96501637-b230-4a68-a3fa-64ff6da47ece",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02e20e1e530549b0a767a462d66d71bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Oppgave:', options=('Volum', 'Areal', 'Prosent', 'Forhold', 'Piksler', 'Gyldne Snitt', '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "486b5c74076f426f9f0ce965a0f1a020",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 3.9 Design og produktutvikling\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
+    "import math\n",
+    "\n",
+    "# Beregningsfunksjoner\n",
+    "def calculate_prism_volume(length, width, height):\n",
+    "    return length * width * height\n",
+    "\n",
+    "def calculate_cylinder_volume(radius, height):\n",
+    "    return math.pi * radius**2 * height\n",
+    "\n",
+    "def calculate_area(length, width):\n",
+    "    return length * width\n",
+    "def calculate_percentage(part, whole):\n",
+    "    return (part / whole) * 100\n",
+    "\n",
+    "def calculate_ratio(a, b):\n",
+    "    return a / b\n",
+    "\n",
+    "def calculate_pixels(resolution, bit_depth):\n",
+    "    return resolution * bit_depth\n",
+    "\n",
+    "def calculate_golden_ratio(a, b):\n",
+    "    return a / b\n",
+    "\n",
+    "def crop_to_aspect_ratio(width, height, target_ratio_width, target_ratio_height):\n",
+    "    # Bevar bredde, juster høyde\n",
+    "    one_part = width / target_ratio_width\n",
+    "    new_height = one_part * target_ratio_height\n",
+    "    cropped_pixels = height - new_height\n",
+    "    return new_height, cropped_pixels\n",
+    "\n",
+    "# Oppgavetyper\n",
+    "task_type = widgets.Dropdown(\n",
+    "    options=[\n",
+    "        'Volum', 'Areal', 'Prosent', 'Forhold', 'Piksler',\n",
+    "        'Gyldne Snitt', 'Bildeformat og beskjæring', 'Quit'\n",
+    "    ],\n",
+    "    value='Volum',\n",
+    "    description='Oppgave:',\n",
+    ")\n",
+    "\n",
+    "# Input-felt\n",
+    "length = widgets.FloatText(description='Lengde:')\n",
+    "width = widgets.FloatText(description='Bredde:')\n",
+    "height = widgets.FloatText(description='Høyde:')\n",
+    "radius = widgets.FloatText(description='Radius:')\n",
+    "part = widgets.FloatText(description='Del:')\n",
+    "whole = widgets.FloatText(description='Hele:')\n",
+    "a = widgets.FloatText(description='A:')\n",
+    "b = widgets.FloatText(description='B:')\n",
+    "resolution = widgets.IntText(description='Oppløsning:')\n",
+    "bit_depth = widgets.IntText(description='Bitdybde:')\n",
+    "img_width = widgets.IntText(description='Bildebredde (px):')\n",
+    "img_height = widgets.IntText(description='Bildehøyde (px):')\n",
+    "target_w = widgets.IntText(description='Målformat bredde:')\n",
+    "target_h = widgets.IntText(description='Målformat høyde:')\n",
+    "\n",
+    "# Output\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "# Oppdater input-felt\n",
+    "def update_inputs(change):\n",
+    "    with output:\n",
+    "        clear_output()\n",
+    "        if change['new'] == 'Volum':\n",
+    "            display(length, width, height, radius)\n",
+    "        elif change['new'] == 'Areal':\n",
+    "            display(length, width)\n",
+    "        elif change['new'] == 'Prosent':\n",
+    "            display(part, whole)\n",
+    "        elif change['new'] == 'Forhold':\n",
+    "            display(a, b)\n",
+    "        elif change['new'] == 'Piksler':\n",
+    "            display(resolution, bit_depth)\n",
+    "        elif change['new'] == 'Gyldne Snitt':\n",
+    "            display(a, b)\n",
+    "        elif change['new'] == 'Bildeformat og beskjæring':\n",
+    "            display(img_width, img_height, target_w, target_h)\n",
+    "        elif change['new'] == 'Quit':\n",
+    "            print(\"Avslutter programmet.\")\n",
+    "\n",
+    "# Kalkuler resultat\n",
+    "def calculate_result(change):\n",
+    "    with output:\n",
+    "        clear_output()\n",
+    "        if task_type.value == 'Volum':\n",
+    "            if radius.value > 0:\n",
+    "                result = calculate_cylinder_volume(radius.value, height.value)\n",
+    "                print(f\"Volum av sylinder: {result:.2f} cm³\")\n",
+    "            else:\n",
+    "                result = calculate_prism_volume(length.value, width.value, height.value)\n",
+    "                print(f\"Volum av prisme: {result:.2f} cm³\")\n",
+    "        elif task_type.value == 'Areal':\n",
+    "            result = calculate_area(length.value, width.value)\n",
+    "            print(f\"Areal: {result:.2f} cm²\")\n",
+    "        elif task_type.value == 'Prosent':\n",
+    "            result = calculate_percentage(part.value, whole.value)\n",
+    "            print(f\"Prosent: {result:.2f}%\")\n",
+    "        elif task_type.value == 'Forhold':\n",
+    "            result = calculate_ratio(a.value, b.value)\n",
+    "            print(f\"Forhold: {result:.2f}\")\n",
+    "        elif task_type.value == 'Piksler':\n",
+    "            result = calculate_pixels(resolution.value, bit_depth.value)\n",
+    "            print(f\"Totalt antall piksler: {result}\")\n",
+    "        elif task_type.value == 'Gyldne Snitt':\n",
+    "            result = calculate_golden_ratio(a.value, b.value)\n",
+    "            print(f\"Forholdet mellom {a.value} og {b.value} er {result:.3f} (Gyldne snitt ≈ 1.618)\")\n",
+    "        elif task_type.value == 'Bildeformat og beskjæring':\n",
+    "            new_h, cropped = crop_to_aspect_ratio(\n",
+    "                img_width.value, img_height.value,\n",
+    "                target_w.value, target_h.value\n",
+    "            )\n",
+    "            print(f\"For å få formatet {target_w.value}:{target_h.value} må høyden beskjæres til {int(new_h)} piksler.\")\n",
+    "            print(f\"Du må fjerne {int(cropped)} piksler i høyden.\")\n",
+    "\n",
+    "# Koble hendelser\n",
+    "task_type.observe(update_inputs, names='value')\n",
+    "for widget in [length, width, height, radius, part, whole, a, b,\n",
+    "               resolution, bit_depth, img_width, img_height, target_w, target_h]:\n",
+    "    widget.observe(calculate_result, names='value')\n",
+    "\n",
+    "# Vis grensesnitt\n",
+    "display(task_type, output)\n",
+    "update_inputs({'new': 'Volum'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e9e024a-1556-4eb7-b100-22cc8e122ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "7ed278b4-1efc-4b57-ac33-bd7c26df5456",
    "metadata": {
@@ -3714,14 +3886,6 @@
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f954fa48-f5ff-4ed9-b759-d0b40cd40d8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4297,27 +4461,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e86dec95-2f51-4df3-9814-4d32f90f9ddb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5e0e95b-0fd8-46c3-9c19-adb5bb8ee351",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
